--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,9 @@
 page-home {
 
+    .logo {
+        padding-top:50px;
+        padding-bottom: 25px;
+        min-height: 200px;
+        text-align: center;
+    }
 }
