--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -6,4 +6,13 @@ page-home {
         min-height: 200px;
         text-align: center;
     }
+
+    ion-content{
+        background-image: url('../../assets/imgs/star_wars_background.jpg');
+
+    }
+    
+    .title{
+        color: white;
+    }
 }
