--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,35 +1,31 @@
 <ion-menu [content]="content">
-        <ion-header>
-            <ion-toolbar>
-                <ion-title>Menu</ion-title>
-            </ion-toolbar>
-        </ion-header>
-    
-        <ion-content>
-            <ion-list no-lines>
-                <ion-item padding>
-                    <ion-icon name="barcode"></ion-icon>
-                    Dashboard
-                </ion-item>
-                <ion-item padding>
-                    <ion-icon name="images"></ion-icon>
-                    Photos
-                </ion-item>
-                <ion-item padding>
-                    <ion-icon name="contacts"></ion-icon>
-                    Available Characters
-                </ion-item>
-                <ion-item padding>
-                    <ion-icon name="contact"></ion-icon>
-                    My Characters
-                </ion-item>
-                <ion-item padding>
-                    <ion-icon name="chatbubbles"></ion-icon>
-                    Chat
-                </ion-item>
-            </ion-list>
-        </ion-content>
-    
-    </ion-menu>
+    <ion-header>
+        <ion-toolbar>
+            <ion-title>Menu</ion-title>
+        </ion-toolbar>
+    </ion-header>
 
-    <ion-nav [root]="rootPage" #content></ion-nav>
+    <ion-content>
+        <ion-list no-lines>
+            <ion-item padding active>
+                <ion-icon name="contacts"></ion-icon>
+                Available Characters
+            </ion-item>
+            <ion-item padding>
+                <ion-icon name="images"></ion-icon>
+                Photos
+            </ion-item>
+            <ion-item padding>
+                <ion-icon name="contact"></ion-icon>
+                My Characters
+            </ion-item>
+            <ion-item padding>
+                <ion-icon name="chatbubbles"></ion-icon>
+                Chat
+            </ion-item>
+        </ion-list>
+    </ion-content>
+
+</ion-menu>
+
+<ion-nav [root]="rootPage" #content></ion-nav>
