feat implement logout button and functionality

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -23,6 +23,10 @@
                 <ion-icon name="chatbubbles"></ion-icon>
                 Chat
             </ion-item>
+            <ion-item padding >
+                <button ion-button clear menuClose (click)="signout()"> <ion-icon name="log-out"></ion-icon>
+                    Sign Out</button>
+        </ion-item>
         </ion-list>
     </ion-content>
 
