--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,6 +15,6 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 ion-content{
-    background-image: url('../../assets/imgs/star_wars_background.jpg');
+    background-image: url('../assets/imgs/star_wars_background.jpg');
 
 }
