--- a/src/components/character-card/character-card.html
+++ b/src/components/character-card/character-card.html
@@ -13,10 +13,10 @@
   <ion-grid>
       <ion-row>
           <ion-col>
-          <button *ngIf="!favorites" ion-button icon-left clear (click)="addToFavorites(character)"><ion-icon name="star"></ion-icon>
+          <button *ngIf="!isFavorite" ion-button icon-left clear (click)="addToFavorites(character)"><ion-icon name="star"></ion-icon>
             <div>Favorite</div>
           </button>
-          <button *ngIf="favorites" ion-button icon-left clear (click)="removeFromFavorites(character)"><ion-icon name="star"></ion-icon>
+          <button *ngIf="isFavorite" ion-button icon-left clear (click)="removeFromFavorites(character)"><ion-icon name="star"></ion-icon>
             <div>Remove From Favorites</div>
           </button>
           </ion-col>
