implement remove favorites

--- a/src/components/character-card/character-card.html
+++ b/src/components/character-card/character-card.html
@@ -16,7 +16,7 @@
           <button *ngIf="!isFavorite" ion-button icon-left clear (click)="addToFavorites(character)"><ion-icon name="star"></ion-icon>
             <div>Favorite</div>
           </button>
-          <button *ngIf="isFavorite" ion-button icon-left clear (click)="removeFromFavorites(character)"><ion-icon name="star"></ion-icon>
+          <button *ngIf="isFavorite" ion-button icon-left clear (click)="removeFromFavorites(character.favoriteId)"><ion-icon name="star"></ion-icon>
             <div>Remove From Favorites</div>
           </button>
           </ion-col>
